# how

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
how/: main.py
