[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "how-cli-groq"
version = "1.0"
description = "Terminal assistant generating accurate shell commands via Groq. Vibe coded by AI from original project"
authors = [{ name = "huanhoahongso3-collab" }]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "groq",
    "pyperclip",
    "psutil"
]
requires-python = ">=3.8"

[project.scripts]
how = "how.main:main"
